Containerization-Orchestration/2.Kubernetes/082/example-4/6-virtual-hosting-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: virtual-hosting
  namespace: staging
spec:
  ingressClassName: external-nginx
  rules:
  - host: foo.devopsbyexample.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: foo
            port:
              number: 5698
  - host: bar.devopsbyexample.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: bar
            port:
              number: 8956
